<resources>
    <string name="app_name">Stickergram</string>
    <string name="home">Home</string>
    <string name="exit">Exit</string>
    <string name="entry_image">Entry Image</string>
    <string name="my_stickers">My Stickers</string>
    <string name="need_permission_to_access_telegram_cache">Need permission to access Telegram cached Stickers</string>
    <string name="template_stickers">Template Stickers</string>
    <string name="first_load">Preparing for the first run!</string>
    <string name="stickers_so_far">Sticker were found so far</string>
    <string name="choose_an_image">Choose an image </string>
    <string name="could_not_make_file">Could not make the file</string>
    <string name="edit_this_sticker">Do you want to edit this Sticker?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text">Text</string>
    <string name="font">Font</string>
    <string name="size">Size</string>
    <string name="tilt">Tilt</string>
    <string name="move">Move</string>
    <string name="add_new_text">Add new text</string>
    <string name="save">Save</string>
    <string name="enter_your_text">Enter your text</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="new_text">New Text</string>
    <string name="select_a_text">Please select a text first</string>
    <string name="ok">OK!</string>
    <string name="english">English</string>
    <string name="persian">Persian</string>
    <string name="add_font">Added font</string>
    <string name="how_to_add_font">How to add new font</string>
    <string name="how_to_add_new_font">You can add new fonts to the app using \n\n 1. The add button and selecting your font \n\n 2. You can also add the font by opening the font from your file explorer with the \'Stickergram\' (i.e. click your font)</string>
    <string name="your_font_was_added_to_the_app">Your font was added to the app</string>
    <string name="couldn_t_add_the_font">Stickergram couldn\'t add the font!</string>
    <string name="text_color">Text color</string>
    <string name="choose_color">Choose color</string>
    <string name="shadow_color">Shadow color</string>
    <string name="shadow_radius">Shadow radius</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="shadow">Shadow</string>
    <string name="text_background">Text background</string>
    <string name="stroke_color">Stroke Color</string>
    <string name="stroke_width">Stroke width</string>
    <string name="telegram_sticker">Telegram cache</string>
    <string name="sticker_from_picture">Create Sticker</string>
    <string name="choose_the_package_to_save_in">Choose a package to save in</string>
    <string name="create_new_package">Create new Package</string>
    <string name="stickergram">Stickergram</string>
    <string name="made">Made with</string>
    <string name="press_back_button_again">Tap back the button again to exit</string>
    <string name="package_name">Package name</string>
    <string name="Folder">Folder</string>
    <string name="every_sticker_must_be_in_a_pack">Every Sticker must be saved in a package</string>
    <string name="every_sticker_must_be_saved_in_a_package_you_have_the_choice">Every Sticker must be saved in a package. You can either choose an existing pack or create a new package</string>
    <string name="are_you_sure_you_are_finished_editing_this_sticker">Are finished editing this Sticker?</string>
    <string name="upgrade_to_pro_to_delete_this_label">Upgrade to pro to delete this label</string>
    <string name="couldn_t_find_telegram_cash_directory">I couldn\'t find any cache directory.</string>
    <string name="telegram_has_not_cashed_any_stickers">Telegram has not cached any Stickers \nSwipe down to refresh</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete_this_sticker">Do you want to delete this Sticker?</string>
    <string name="telegram_is_not_installed_you_can_t_create_sticker">Telegram is not installed you can\'t create sticker!</string>
    <string name="do_you_want_to_send_this_sticker">Do you want to send this Sticker?</string>
    <string name="note_in_order_to_use_any_of_these_sticker_in_telegram">Note: In order to use this Sticker in Telegram you must create your Sticker pack on Telegram using @Stickers bot and add this Sticker to the pack. So you must already have started the pack creation before sending this sticker to the @Stickers bot.</string>
    <string name="for_more_info_press_on_how_to_button">For more info read the help and FAQ</string>
    <string name="activate_stickers_bot">Activate @Stickers bot</string>
    <string name="publish">Publish</string>
    <string name="go_to_bot">Go to bot</string>
    <string name="help">Help &amp; FAQ</string>
    <string name="you_will_lose_progress">You will lose the progress if you exit right now save the sticker first.</string>
    <string name="choose_the_stickers_bot">Choose the @Stickers Bot</string>
    <string name="need_permission_to_look_for_your_stickers">Need permission to access your Stickers</string>
    <string name="need_permission_to_save_the_sticker">Need permission to save the Sticker</string>
    <string name="there_was_a_problem_getting_the_picture">There was a problem loading the picture.</string>
    <string name="add_new_text_or_set_a_text_selected">Add a new Layer or select one</string>
    <string name="name_can_not_contain_symbols">Name can not contain symbols or be empty!</string>
    <string name="buy_the_pro_version_for_full_functionality">To remove the label and use full functionality tap here</string>
    <string name="shadow_position">Shadow position</string>
    <string name="stroke_color_is_only_available_in_blue_upgrade_to_pro_to_access_all_colors">in free version drop shadow color is only available in blue</string>
    <string name="buy_pro">Buy pro version</string>
    <string name="empty_image">Empty image</string>
    <string name="your_stickers_explanation">Here you will find all the stickers that you will create</string>
    <string name="got_it">Got it</string>
    <string name="phone_stickers_explanation">Here you will find all the stickers that Telegram has cached</string>
    <string name="template_stickers_explanation">You can find couple of images to edit here</string>
    <string name="scratch_stickers_explanation">Lastly, here you can use your own pictures to make a stickers.\nYou also have the option to use an empty picture.</string>
    <string name="Let_s_go">Let\'s go!</string>
    <string name="okay">Okay…</string>
    <string name="low_storage_finish">Your device is low on memory free up some space!</string>
    <string name="low_storage">Internal storage is (almost) full the app is unstable please free up some memory!</string>
    <string name="failed_to_save_the_sticker">Failed to save the sticker please free up some memory!</string>
    <string name="this_name_already_exist">This name already exist.</string>
    <string name="payment_was_unsuccessful">Payment was unsuccessful</string>
    <string name="copied">Command was copied!</string>
    <string name="telegram_is_not_installed">Telegram is not installed</string>
    <string name="thanks_for_using_the_app_n_nif_you_have_any_suggestion_or_bug_report_you_can_send_me_an_email">Thanks for using the app.\n\nIf you have any suggestion or bug report you can send me an email.</string>
    <string name="send_an_email">Send an email</string>
    <string name="join_the_channel">Join our channel</string>
    <string name="join_our_channel_on_telegram">Join our channel on Telegram to get the latest news on the app development and share your stickers with others (You might find my username too ;) )</string>
    <string name="contact">Contact</string>
    <string name="google_play_services_is_not_installed">Google play Services is not installed.</string>
    <string name="there_is_no_email_client_installed">There is no email client installed</string>
    <string name="send_mail">Send mail</string>
    <string name="sticker_name">Sticker Name</string>
    <string name="tilt_pro">Tilt (pro)</string>
    <string name="you_can_only_create_two_pack_in_free_version">You can\'t create more than two pack in the free version</string>
    <string name="you_haven_t_created_any_sticker">You haven\'t created any sticker!</string>
    <string name="name_must_be_shorter_than_50_character">Name must be shorter than 50 character</string>
    <string name="refresh">Refresh</string>
    <string name="sweep_refresh_is_also_available">Sweep down refresh is also available</string>
    <string name="choose_a_font">Chosen file was not a font</string>
    <string name="tilt_effect">Tilt effect will not be applied in the free version!</string>
    <string name="shadow_position_effect">Shadow position will not be applied in the free version!</string>
    <string name="rate_us">Rate us</string>
    <string name="rate">Rate</string>
    <string name="uninstall_lucky_patcher">Uninstall lucky patcher!</string>
    <string name="what_s_a_pack">What\'s a Pack?</string>
    <string name="a_pack_is_a_package_that_contain_a_number">A pack is a package that contain a number of Stickers. Every Sticker must be contain within a pack.</string>
    <string name="what_can_i_do_with_this_app">What can i do with this app?</string>
    <string name="this_app_helps_you_create_stickers_more_easily_and_faster">This app helps you create Stickers more easily and faster.</string>
    <string name="what_s_a_bot">What\'s a Bot?</string>
    <string name="a_bot_is_another_computer_program_that_runs_on_telegram">A bot is another computer program that runs on Telegram servers and you can communicate with it. You will use @Stickers bot to create your stickers on Telegram.</string>
    <string name="how_can_i_use_my_stickers_in_telegram">How can i convert my stickers to a pack in Telegram?</string>
    <string name="_2_the_bot_will_ask_for_commands_as_every_sticker">2.The bot will ask for commands. As every Sticker must be contained within a pack you need to create a new pack and add your sticker to it.</string>
    <string name="_3_the_bot_will_now_ask_you">3. The bot will now ask you to give your new pack a name so send the name of the pack to the bot. This name can be anything.</string>
    <string name="_4_as_every_sticker_has_a_corresponding">4. Go back to the stickergram app and enter to \"Pack creation mode\" then send the sticker you have created to the bot.</string>
    <string name="_5_after_sending_the_emoji_send">5. Now send an emoji to the bot corresponding to the sticker that you have sent.\n\nIMPORTANT: Do the step 4 and 5 as long as you have stickers to add to your pack on Telegram.</string>
    <string name="_6_when_you_were_done_adding_stickers_to_the_pack_you">6. When you were done adding Stickers to the pack you will need to publish the pack. In order to publish a pack you need to send the publish command to the bot.</string>
    <string name="_7_after_sending_the_publish_command_you">7.After sending the /publish command  and /skip command you need to provide a short name for your pack. Short name will be only used in the link to your Sticker pack.</string>
    <string name="_8_hooray_you_published_a_new_pack">8. Hooray you published a new pack. The bot will give you a link which you can access your stickers from.</string>
    <string name="what_if_i_wanted_to_add_sticker_to_a_published_pack">What if i wanted to add Sticker to a published pack?</string>
    <string name="use_the">Use the </string>
    <string name="what_if_i_wanted_to_delete_a_sticker_from_a_published_pack">What if i wanted to delete a Sticker from a published pack?</string>
    <string name="drop_shadow_with_line">Drop \n shadow</string>
    <string name="add_to_whatsapp">Add to WhatsApp</string>
</resources>