<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/include_buttons_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="219dp"
    android:layout_alignParentBottom="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/include_buttons_text_button"
            style="@style/EditActivityButton"
            android:background="#E3F2FD"
            android:text="@string/text"
            android:textColor="@color/text_button_color" />


        <Button
            android:id="@+id/include_buttons_size_button"
            android:background="#BBDEFB"
            android:text="@string/size"
            style="@style/EditActivityButton"
            android:textColor="@color/size_button_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/include_buttons_tilt_button"
            android:background="#90CAF9"
            android:text="@string/tilt"
            style="@style/EditActivityButton"
            android:textColor="@color/tilt_button_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/include_buttons_font_button"
            android:background="#64B5F6"
            android:text="@string/fontItem"
            style="@style/EditActivityButton"
            android:textColor="@color/font_button_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/include_buttons_text_color"
            android:background="#42A5F5"
            android:text="@string/text_color"
            style="@style/EditActivityButton"
            android:textColor="@color/text_color_button_color"
            android:textSize="16sp" />


        <Button
            android:id="@+id/include_buttons_text_background"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:foreground="?android:selectableItemBackground"
            android:padding="@dimen/edit_activity_button_padding"
            android:text="@string/text_background"
            android:textColor="@color/text_background_button_color"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1E88E5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/include_buttons_text_stroke_color"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:selectableItemBackground"
                android:padding="@dimen/edit_activity_button_padding"
                android:text="@string/stroke_color"
                android:textColor="@color/stroke_button_color" />


            <Button
                android:id="@+id/include_buttons_text_stroke_width"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:selectableItemBackground"
                android:padding="@dimen/edit_activity_button_padding"
                android:text="@string/stroke_width"
                android:textColor="@color/stroke_button_color" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1976D2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/shadow"
                android:textColor="#eee" />


            <Button
                android:id="@+id/include_buttons_shadow_color"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:selectableItemBackground"
                android:padding="@dimen/edit_activity_button_padding"
                android:text="@string/shadow_color"
                android:textColor="@color/shadow_button_color" />

            <Button
                android:id="@+id/include_buttons_shadow_radius"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:selectableItemBackground"
                android:padding="@dimen/edit_activity_button_padding"
                android:text="@string/shadow_radius"
                android:textColor="@color/shadow_button_color" />

            <Button
                android:id="@+id/include_buttons_shadow_dx"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:selectableItemBackground"
                android:padding="@dimen/edit_activity_button_padding"
                android:text="@string/shadow_dx"
                android:textColor="@color/shadow_button_color" />

            <Button
                android:id="@+id/include_buttons_shadow_dy"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:foreground="?android:selectableItemBackground"
                android:padding="@dimen/edit_activity_button_padding"
                android:text="@string/shadow_dy"
                android:textColor="@color/shadow_button_color" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
