<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/phone_sticker_background_color">


    <TextView
        android:id="@+id/fragment_user_detailed_pack_text_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/Folder"
        android:textColor="#fff"
        android:textSize="18sp"
        android:visibility="gone" />


    <Button
        android:id="@+id/fragment_user_detailed_pack_export_to_whatsapp"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_user_detailed_pack_text_folder"
        android:layout_margin="5dp"
        android:background="@color/default_button_background"
        android:text="@string/add_to_whatsapp"
        android:textColor="#fff"
        android:elevation="5dp"/>

    <Button
        android:id="@+id/fragment_user_detailed_pack_pack_creation_mode"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_user_detailed_pack_export_to_whatsapp"
        android:layout_margin="5dp"
        android:background="@color/default_button_background"
        android:text="@string/go_to_bot"
        android:textColor="#fff"
        android:elevation="5dp"
        android:visibility="gone" />


    <include
        android:id="@+id/include_detailed_note_container"
        layout="@layout/include_detailed_note" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_user_detailed_pack_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/fragment_user_detailed_pack_pack_creation_mode"
        android:scrollbars="vertical" />


    <ProgressBar
        android:id="@+id/fragment_icon_detailed_progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
         />

</RelativeLayout>



